--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <title>{{ page.title }}</title>
+
+  <link rel="stylesheet" href="{{ site.url }}/css/guide.css" />
 </head>
 <body>
 {{ content }}
