Fixed link to stylesheet

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>{{ page.title }}</title>
 
-  <link rel="stylesheet" href="{{ site.url }}/css/guide.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/guide.css" />
 </head>
 <body>
 {{ content }}
