--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,5 +28,22 @@
 		{{ content }}
 	</main>
 
+	
+	<footer>
+<p>
+35th Edition. The People’s Guide to Welfare, Health &amp; Other Services
+©2014-2015 Hunger Action Los Ange- les (HALA)
+</p>
+
+<p>Editors: Frank Tamborello, Michelle Udeorji</p>
+
+<p>
+Editorial Committee and Major Contributors: Elena Ackel, Yolanda An- guiano, Yolanda Arias, Nancy Berlin, Ryan Bradley, Andrew Chen, Hannah Courtney, Cathy Deppe, Lilya Dishchyan, Nikki Edwards, Ben Gordon, Lynn Kersey, Jin Lee, Caitlin Lynch, Kate Meiss, Jeanne Nishimoto, Donald Noller, Lucy Petrow, Natasha Roland, Matt Sharp, Marjorie
+Shelvy, Leepi Shimkhada,Jose Tello, Staff of LA County DPSS, Staff of LA CAN. Ap- pologies if we missed anyone.
+Spanish translation: Eliza Fraga
+</p>
+	
+<p>DISCLAIMER: Hunger Action Los Angeles (HALA) and other contributors to this book are not responsible for the action, conduct, treatment you receive, and/or quality of service of any private (non-government) agencies listed in this book and their staff. Government agencies have their own complaint procedures (see pg. 66) Also, phone numbers and other important information change: this information was accurate as of October 2014.</p>
+	</footer>
 </body>
 </html>
