--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 	<footer>
 <p>
 35th Edition. The People’s Guide to Welfare, Health &amp; Other Services
-©2014-2015 Hunger Action Los Ange- les (HALA)
+©2014-2015 <a href="http://www.hungeractionla.org">Hunger Action Los Angeles</a> (HALA)
 </p>
 
 <p>Editors: Frank Tamborello, Michelle Udeorji</p>
