--- a/css/guide.css
+++ b/css/guide.css
@@ -137,7 +137,7 @@
 		/*width: 100%;*/
 		margin: 0;
 		padding: 1em;
-		background-color: black;
+		background-color: #CC3333;
 		color: white;
 		display: flex;
 		justify-content: space-between;
