--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 	<footer>
 		<h2>The People’s Guide to Welfare, Health &amp; Other Services</h2>
 		<p>36th Edition. 2015. Los Angeles County.</p>
-		<p><a href="http://www.hungeractionla.org"><img src="{{ site.defaulturl }}/assets/hala-site-logo140x140.png" alt="Hunger Action LA"></a></p>
+		<p><a href="http://www.hungeractionla.org"><img src="{{ site.baseurl }}/assets/hala-site-logo140x140.png" alt="Hunger Action LA"></a></p>
 
 		<p>©2014-2015 Hunger Action Los Angeles (HALA)</p>
 
