Add logo credit.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,8 @@
 		</p>
 			
 		<p>DISCLAIMER: Hunger Action Los Angeles (HALA) and other contributors to this book are not responsible for the action, conduct, treatment you receive, and/or quality of service of any private (non-government) agencies listed in this book and their staff. Government agencies have their own complaint procedures (see pg. 66) Also, phone numbers and other important information change: this information was accurate as of October 2014.</p>
+
+		<p>Logo by <a href="https://thenounproject.com/hugugolplex/">Hugo Alberto</a>, from the <a href="https://thenounproject.com">Noun Project</a>.</p>
 	</footer>
 </body>
 </html>
